--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura,
 Produção:
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-1. The Riemannian Hebbarkeitssätze for pseudorigid spaces. <a href="https://arxiv.org/abs/1711.06903">arXiv</a>
+1. The Riemannian Hebbarkeitssätze for pseudorigid spaces. <a href="https://arxiv.org/abs/1711.06903">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 2. Grassmanniennes affines tordues sur les entiers. <a href="https://arxiv.org/abs/1912.11918">arXiv</a>.
@@ -33,7 +33,7 @@ Produção:
 <a href="https://arxiv.org/abs/1806.11001">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-5. On the p-adic theory of local models (com Johannes Anschütz, Ian Gleason, e Timo Richarz)
+5. On the p-adic theory of local models (com Johannes Anschütz, Ian Gleason, e Timo Richarz).
 <a href="https://arxiv.org/abs/2201.01234">arXiv</a>.
 </p>
 <br>
