--- a/pagina_pessoal_joao_lourenco.html
+++ b/pagina_pessoal_joao_lourenco.html
@@ -29,11 +29,11 @@ Produção:
 3. Théorie de Bruhat-Tits pour les groupes quasi-réductifs. <a href="https://arxiv.org/abs/2001.05362">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-4. On the normality of Schubert varieties: remaining cases in positive characteristic (com Tom Haines, e Timo Richarz). 
+4. On the normality of Schubert varieties: remaining cases in positive characteristic (com <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>). 
 <a href="https://arxiv.org/abs/1806.11001">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-5. On the p-adic theory of local models (com Johannes Anschütz, Ian Gleason, e Timo Richarz).
+5. On the p-adic theory of local models (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
 <a href="https://arxiv.org/abs/2201.01234">arXiv</a>.
 </p>
 <br>
