--- a/pagina_pessoal_joao_lourenco.html
+++ b/pagina_pessoal_joao_lourenco.html
@@ -36,6 +36,10 @@ Produção:
 5. On the p-adic theory of local models (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
 <a href="https://arxiv.org/abs/2201.01234">arXiv</a>.
 </p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+6. Tubular neighborhoods of local models (com <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>.
+<a href="https://arxiv.org/abs/">arXiv</a>.
+</p>
 <br>
 
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
