--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@ Produção:
 <a href="https://arxiv.org/abs/2201.01234">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-6. Tubular neighborhoods of local models (com <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>.
+6. Tubular neighborhoods of local models (com <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>).
+<a href="https://arxiv.org/abs/">arXiv</a>.
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+7. Singularities of local models (com Najmuddin Fakhruddin, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
 <a href="https://arxiv.org/abs/">arXiv</a>.
 </p>
 <br>
