--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@ Produção:
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 7. Singularities of local models (com Najmuddin Fakhruddin, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
-<a href="https://arxiv.org/abs/">arXiv</a>.
+Por vir.
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+8. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov in mixed characteristic (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Zhiyou Wu, e Jize Yu).
+Por vir.
 </p>
 <br>
 
