--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Produção:
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 6. Tubular neighborhoods of local models (com <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>).
-<a href="https://arxiv.org/abs/">arXiv</a>.
+<a href="https://arxiv.org/abs/2204.05526">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 7. Singularities of local models (com Najmuddin Fakhruddin, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
