--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <h6> lourenco arroba mpim traço bonn ponto mpg ponto de </h3>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Neste momento, estou a visitir o MPIM em Bona. Antes disso, fiz um pós-doutoramento em Londres com a Prof. Caraiani, e doutorei-me sob orientação 
-do Prof. Scholze na Universidade de Bona.
+Visitante do MPIM Bonn.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
