--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Produção:
 1. The Riemannian Hebbarkeitssätze for pseudorigid spaces. <a href="https://arxiv.org/abs/1711.06903">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-2. <a href="https://rastrel.github.io/folder/graffjou2.pdf" target="_blank">Grassmanniennes affines tordues sur les entiers</a>. <a href="https://arxiv.org/abs/1912.11918">arXiv</a>.
+2. <a href="https://rastrel.github.io/Lourenco/graffjou2.pdf">Grassmanniennes affines tordues sur les entiers</a>. <a href="https://arxiv.org/abs/1912.11918">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 3. Théorie de Bruhat-Tits pour les groupes quasi-réductifs. <a href="https://arxiv.org/abs/2001.05362">arXiv</a>.
