--- a/index.html
+++ b/index.html
@@ -31,34 +31,32 @@ Produção:
 2. <a href="https://rastrel.github.io/Lourenco/graffjou2.pdf">Grassmanniennes affines tordues sur les entiers</a>. <a href="https://arxiv.org/abs/1912.11918">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-3. Théorie de Bruhat-Tits pour les groupes quasi-réductifs. <a href="https://arxiv.org/abs/2001.05362">arXiv</a>.
+3. <a href="https://rastrel.github.io/Lourenco/btjou.pdf">Théorie de Bruhat-Tits pour les groupes quasi-réductifs</a>. <a href="https://arxiv.org/abs/2001.05362">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-4. On the normality of Schubert varieties: remaining cases in positive characteristic (com <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>). 
+4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
+<a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a>.
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_19.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>). 
 <a href="https://arxiv.org/abs/1806.11001">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-5. On the p-adic theory of local models (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
+6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
 <a href="https://arxiv.org/abs/2201.01234">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-6. Tubular neighborhoods of local models (com <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>).
+7. <a href="https://rastrel.github.io/Lourenco/tubenbghd.pdf">Tubular neighborhoods of local models</a> (com <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>).
 <a href="https://arxiv.org/abs/2204.05526">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-7. Singularities of local models (com Najmuddin Fakhruddin, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
+8. Singularities of local models (com Najmuddin Fakhruddin, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
 Para vir.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-8. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov in mixed characteristic (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Zhiyou Wu, e Jize Yu).
+9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov in mixed characteristic (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Zhiyou Wu, e Jize Yu).
 Para vir.
 </p>
 <br>
 
-<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Tese de doutoramento: Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
-<a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">bonndoc</a>.
-</p>
-</body>
-</html>
 
