--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h6> lourenco arroba mpim traço bonn ponto mpg ponto de </h3>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Visitante do MPIM Bonn.
+Max-Planck-Institut für Mathematik, Bonn. Visitante.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
