--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@ Produção:
 2. <a href="https://rastrel.github.io/Lourenco/graffjou2.pdf">Grassmanniennes affines tordues sur les entiers</a>. <a href="https://arxiv.org/abs/1912.11918">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-3. <a href="https://rastrel.github.io/Lourenco/btjou.pdf">Théorie de Bruhat-Tits pour les groupes quasi-réductifs</a>. <a href="https://arxiv.org/abs/2001.05362">arXiv</a>.
+3. <a href="https://rastrel.github.io/Lourenco/btjou.pdf">Théorie de Bruhat-Tits pour les groupes quasi-réductifs</a>. 
+  <a href="https://arxiv.org/abs/2001.05362">arXiv</a>.
+  Journal Inst. Math. Jussieu
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
