--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Produção:
   Journal Inst. Math. Jussieu
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
+4. <a href="https://rastrel.github.io/Lourenco/sanduiche.pdf">Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux</a>. 
 <a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
