--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ Max-Planck-Institut für Mathematik, Bonn. Visitante.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica da representação.
+Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica da representação. 
+  <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">Currículo</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
@@ -56,7 +57,7 @@ Produção:
 Para vir.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov in mixed characteristic (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Zhiyou Wu, e Jize Yu).
+9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov in mixed characteristic (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>).
 Para vir.
 </p>
 <br>
