--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ Max-Planck-Institut für Mathematik, Bonn. Visitante.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica da representação. 
-  <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">Currículo</a>.
+Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica da representação.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
@@ -37,7 +36,7 @@ Produção:
   Journal Inst. Math. Jussieu
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-4. <a href="https://rastrel.github.io/Lourenco/sanduiche.pdf">Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux</a>. 
+4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
 <a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
