--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Max-Planck-Institut für Mathematik, Bonn. Visitante.
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica da representação.
+  <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf"</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
