--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 <h6> lourenco arroba mpim traço bonn ponto mpg ponto de </h3>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Max-Planck-Institut für Mathematik, Bonn. Visitante.
+Max-Planck-Institut für Mathematik, Bonn. Visitante. <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf" Currículo</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica da representação.
-  <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf"</a>.
+Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica da representação.  
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
