--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h6> lourenco arroba mpim traço bonn ponto mpg ponto de </h3>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Max-Planck-Institut für Mathematik, Bonn. Visitante. <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf" Currículo</a>.
+Max-Planck-Institut für Mathematik, Bonn. Visitante. <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">Currículo</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
