--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Produção:
 Para vir.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov in mixed characteristic (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>).
+9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>).
 Para vir.
 </p>
 <br>
