--- a/index.html
+++ b/index.html
@@ -33,32 +33,41 @@ Produção:
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 3. <a href="https://rastrel.github.io/Lourenco/btjou.pdf">Théorie de Bruhat-Tits pour les groupes quasi-réductifs</a>. 
   <a href="https://arxiv.org/abs/2001.05362">arXiv</a>.
-  Journal Inst. Math. Jussieu
+  J. Inst. Math. Jussieu
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
 <a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_19.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>). 
+5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_19.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com Thomas Haines, e Timo Richarz). 
 <a href="https://arxiv.org/abs/1806.11001">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
+6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (com Johannes Anschütz, Ian Gleason, e Timo Richarz).
 <a href="https://arxiv.org/abs/2201.01234">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-7. <a href="https://rastrel.github.io/Lourenco/tubenbghd.pdf">Tubular neighborhoods of local models</a> (com <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>).
+7. <a href="https://rastrel.github.io/Lourenco/tubenbghd.pdf">Tubular neighborhoods of local models</a> (com Ian Gleason).
 <a href="https://arxiv.org/abs/2204.05526">arXiv</a>.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-8. Singularities of local models (com Najmuddin Fakhruddin, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, e <a href="https://timo-richarz.com/research/">Timo Richarz</a>).
+8. Singularities of local models (com Najmuddin Fakhruddin, Thomas Haines, e Timo Richarz).
+<a href="https://arxiv.org/abs/2208.12072">arXiv</a>.
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
 Para vir.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>).
+9. A modular ramified geometric Satake equivalence (com Pramod Achar, Timo Richarz, e Simon Riche).
 Para vir.
 </p>
 <br>
+  
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+Coautores: <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
+Para vir.
+</p>
 
 
