--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Max-Planck-Institut für Mathematik, Bonn. Visitante. <a href="https://rastrel.g
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica da representação.  
+Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica das representações.  
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
@@ -66,8 +66,7 @@ Para vir.
 <br>
   
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Coautores: <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
-Para vir.
+Coautores: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
 </p>
 
 
