--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <h6> lourenco arroba mpim traço bonn ponto mpg ponto de </h3>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Max-Planck-Institut für Mathematik, Bonn. Visitante. <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">Currículo</a>.
+Max-Planck-Institut für Mathematik, Bonn. Visitante. 
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Interesses: Geometria aritmética. Programa de Langlands, variedades de Shimura, teoria geométrica das representações.  
+Currículo: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>, <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">fr</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
