--- a/index.html
+++ b/index.html
@@ -25,35 +25,35 @@ Currículo: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>,
 Produção:
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-1. The Riemannian Hebbarkeitssätze for pseudorigid spaces. <a href="https://arxiv.org/abs/1711.06903">arXiv</a>.
+1. The Riemannian Hebbarkeitssätze for pseudorigid spaces. <a href="https://arxiv.org/abs/1711.06903">arXiv</a> (2017).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-2. <a href="https://rastrel.github.io/Lourenco/graffjou2.pdf">Grassmanniennes affines tordues sur les entiers</a>. <a href="https://arxiv.org/abs/1912.11918">arXiv</a>.
+2. <a href="https://rastrel.github.io/Lourenco/graffjou2.pdf">Grassmanniennes affines tordues sur les entiers</a>. <a href="https://arxiv.org/abs/1912.11918">arXiv</a> (2019).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 3. <a href="https://rastrel.github.io/Lourenco/btjou.pdf">Théorie de Bruhat-Tits pour les groupes quasi-réductifs</a>. 
-  <a href="https://arxiv.org/abs/2001.05362">arXiv</a>.
+  <a href="https://arxiv.org/abs/2001.05362">arXiv</a> (2020).
   J. Inst. Math. Jussieu
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
-<a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a>.
+<a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a> (2020).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_19.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com Thomas Haines, e Timo Richarz). 
-<a href="https://arxiv.org/abs/1806.11001">arXiv</a>.
+<a href="https://arxiv.org/abs/1806.11001">arXiv</a> (2020).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (com Johannes Anschütz, Ian Gleason, e Timo Richarz).
-<a href="https://arxiv.org/abs/2201.01234">arXiv</a>.
+<a href="https://arxiv.org/abs/2201.01234">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 7. <a href="https://rastrel.github.io/Lourenco/tubenbghd.pdf">Tubular neighborhoods of local models</a> (com Ian Gleason).
-<a href="https://arxiv.org/abs/2204.05526">arXiv</a>.
+<a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 8. Singularities of local models (com Najmuddin Fakhruddin, Thomas Haines, e Timo Richarz).
-<a href="https://arxiv.org/abs/2208.12072">arXiv</a>.
+<a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
