--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h6> lourenco arroba mpim traço bonn ponto mpg ponto de </h3>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Westfällische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
+Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
