--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Produção:
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 3. <a href="https://rastrel.github.io/Lourenco/btjou.pdf">Théorie de Bruhat-Tits pour les groupes quasi-réductifs</a>. 
   <a href="https://arxiv.org/abs/2001.05362">arXiv</a> (2020).
-  J. Inst. Math. Jussieu
+  J. Inst. Math. Jussieu.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
@@ -41,7 +41,8 @@ Produção:
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_19.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com Thomas Haines, e Timo Richarz). 
-<a href="https://arxiv.org/abs/1806.11001">arXiv</a> (2020).
+<a href="https://arxiv.org/abs/1806.11001">arXiv</a> (2020). 
+  Ann. Sci. Éc. Norm. Supér.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (com Johannes Anschütz, Ian Gleason, e Timo Richarz).
