--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1 style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;"> João Lourenço </h1>
-<h6> lourenco arroba mpim traço bonn ponto mpg ponto de </h3>
+<h6> j ponto lourenco arroba uni traço muenster ponto de </h3>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
