--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Produção:
 <a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a> (2020).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_19.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com Thomas Haines, e Timo Richarz). 
+5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_22.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com Thomas Haines, e Timo Richarz). 
 <a href="https://arxiv.org/abs/1806.11001">arXiv</a> (2020). 
   Ann. Sci. Éc. Norm. Supér.
 </p>
@@ -53,15 +53,19 @@ Produção:
 <a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-8. Singularities of local models (com Najmuddin Fakhruddin, Thomas Haines, e Timo Richarz).
+8. <a href="https://rastrel.github.io/Lourenco/singlocmodels.pdf">Singularities of local models (com Najmuddin Fakhruddin, Thomas Haines, e Timo Richarz).
 <a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-9. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
+9. <a href="https://rastrel.github.io/Lourenco/NStrata.pdf">On the connectedness of p-adic period domains (com Ian Gleason).
+(2022).
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+10. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
 Para vir.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-10. A modular ramified geometric Satake equivalence (com Pramod Achar, Timo Richarz, e Simon Riche).
+11. A modular ramified geometric Satake equivalence (com Pramod Achar, Timo Richarz, e Simon Riche).
 Para vir.
 </p>
 <br>
