--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ Produção:
 <a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-8. <a href="https://rastrel.github.io/Lourenco/singlocmodels.pdf">Singularities of local models (com Najmuddin Fakhruddin, Thomas Haines, e Timo Richarz).
+  8. <a href="https://rastrel.github.io/Lourenco/singlocmodels.pdf">Singularities of local models</a> (com Najmuddin Fakhruddin, Thomas Haines, e Timo Richarz).
 <a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-9. <a href="https://rastrel.github.io/Lourenco/NStrata.pdf">On the connectedness of p-adic period domains (com Ian Gleason).
+9. <a href="https://rastrel.github.io/Lourenco/NStrata.pdf">On the connectedness of p-adic period domains</a> (com Ian Gleason).
 (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
