--- a/index.html
+++ b/index.html
@@ -73,5 +73,19 @@ Para vir.
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Coautores: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
 </p>
+  
+<br>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+Ensino:
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+1. <a href="https://arxiv.org/abs/1711.06903">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (com Matteo Tamiozzo). Londres (2020).
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+2. <a href="https://arxiv.org/abs/1711.06903">Darstellungstheorie endlicher Gruppen</a> (com Eva Viehmann). Münster (2022).
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+3. <a href="https://arxiv.org/abs/1711.06903">The Bezrukavnikov equivalence</a> (com Konrad Zou). Essen, Münster, Bona (2022).
+</p>
 
 
