--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ Coautores: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href
 Ensino:
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-1. <a href="https://arxiv.org/abs/1711.06903">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (com Matteo Tamiozzo). Londres (2020).
+1. <a href="https://rastrel.github.io/Lourenco/Fargues_Scholze seminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (com Matteo Tamiozzo). Londres (2020).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-2. <a href="https://arxiv.org/abs/1711.06903">Darstellungstheorie endlicher Gruppen</a> (com Eva Viehmann). Münster (2022).
+2. <a href="https://rastrel.github.io/Lourenco/seminardarstgruppen.pdf">Darstellungstheorie endlicher Gruppen</a> (com Eva Viehmann). Münster (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-3. <a href="https://arxiv.org/abs/1711.06903">The Bezrukavnikov equivalence</a> (com Konrad Zou). Essen, Münster, Bona (2022).
+3. <a href="https://rastrel.github.io/Lourenco/bezrukavnikov_seminar.pdf">The Bezrukavnikov equivalence</a> (com Konrad Zou). Essen, Münster, Bona (2022).
 </p>
 
 
