--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@ Produção:
 <a href="https://arxiv.org/abs/2210.08625">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-10. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
+10. Fixed points under pinning-preserving automorphisms of reductive group schemes (com Pramod Achar, Timo Richarz, e Simon Riche).
 Para vir.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-11. A modular ramified geometric Satake equivalence (com Pramod Achar, Timo Richarz, e Simon Riche).
+11. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
+Para vir.
+</p>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+12. A modular ramified geometric Satake equivalence (com Pramod Achar, Timo Richarz, e Simon Riche).
 Para vir.
 </p>
 <br>
