--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Produção:
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 10. Fixed points under pinning-preserving automorphisms of reductive group schemes (com Pramod Achar, Timo Richarz, e Simon Riche).
-Para vir.
+<a href="https://arxiv.org/abs/2212.10182">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 11. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
