--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Produção:
 <a href="https://arxiv.org/abs/2210.08625">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-10. Fixed points under pinning-preserving automorphisms of reductive group schemes (com Pramod Achar, Timo Richarz, e Simon Riche).
+10. <a href="https://rastrel.github.io/Lourenco/fix-pts.pdf">Fixed points under pinning-preserving automorphisms of reductive group schemes</a> (com Pramod Achar, Timo Richarz, e Simon Riche).
 <a href="https://arxiv.org/abs/2212.10182">arXiv</a> (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
