--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 </head>
 <body>
+    <nav> Línguas
+      <a href="./indexde.html">de</a>
+      <a href="./indexen.html">en</a>
+      <a href="./indexfr.html">fr</a>
+    </nav>
 <h1 style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;"> João Lourenço </h1>
 <h6> j ponto lourenco arroba uni traço muenster ponto de </h3>
 <br>
