--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 </head>
 </head>
 <body>
-    <nav> Línguas
-      <a href="./indexde.html">de</a>
-      <a href="./indexen.html">en</a>
-      <a href="./indexfr.html">fr</a>
-    </nav>
 <h1 style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;"> João Lourenço </h1>
 <h6> j ponto lourenco arroba uni traço muenster ponto de </h3>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
 </p>
+ <br>
+<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+Línguas:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//indexen.html">en</a>, <a href="https://rastrel.github.io/Lourenco//indexfr.html">fr</a> 
+  </p>      
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Currículo: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>, <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">fr</a>.
