--- a/indexde.html
+++ b/indexde.html
@@ -17,6 +17,9 @@
 Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
 </p>
 <br>
+  <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+Sprachen: <a href="https://rastrel.github.io/Lourenco/indexen">en</a>, <a href="https://rastrel.github.io/Lourenco//indexfr.html">fr</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
+  </p>    
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Lebenslauf: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>, <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">fr</a>.
 </p>
@@ -98,5 +101,5 @@ Lehre:
   
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Mitautoren: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
+Mitautoren: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, und <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
 </p>
