--- a/indexen.html
+++ b/indexen.html
@@ -87,13 +87,13 @@ Teaching:
 4. <a href="https://rastrel.github.io/Lourenco/seminarhomfrob.pdf">Homological and Frobenius methods in commutative algebra</a>. Münster(2023).
 </p>  
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-3. <a href="https://rastrel.github.io/Lourenco/bezrukavnikov_seminar.pdf">The Bezrukavnikov equivalence</a> (with Konrad Zou). Essen, Münster, Bona (2022).
+3. <a href="https://rastrel.github.io/Lourenco/bezrukavnikov_seminar.pdf">The Bezrukavnikov equivalence</a> (with Konrad Zou). Essen, Münster, Bonn (2022).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 2. <a href="https://rastrel.github.io/Lourenco/seminardarstgruppen.pdf">Darstellungstheorie endlicher Gruppen</a> (with Eva Viehmann). Münster (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-1. <a href="https://rastrel.github.io/Lourenco/Fargues_Scholze seminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (with Matteo Tamiozzo). Londres (2020).
+1. <a href="https://rastrel.github.io/Lourenco/Fargues_Scholze seminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (with Matteo Tamiozzo). London (2020).
 </p>
 
 
