--- a/indexfr.html
+++ b/indexfr.html
@@ -87,7 +87,7 @@ Enseignement:
 4. <a href="https://rastrel.github.io/Lourenco/seminarhomfrob.pdf">Homological and Frobenius methods in commutative algebra</a>. Münster(2023).
 </p>  
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-3. <a href="https://rastrel.github.io/Lourenco/bezrukavnikov_seminar.pdf">The Bezrukavnikov equivalence</a> (avec Konrad Zou). Essen, Münster, Bona (2022).
+3. <a href="https://rastrel.github.io/Lourenco/bezrukavnikov_seminar.pdf">The Bezrukavnikov equivalence</a> (avec Konrad Zou). Essen, Münster, Bonn (2022).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 2. <a href="https://rastrel.github.io/Lourenco/seminardarstgruppen.pdf">Darstellungstheorie endlicher Gruppen</a> (avec Eva Viehmann). Münster (2022).
