--- a/indexen.html
+++ b/indexen.html
@@ -10,10 +10,10 @@
 </head>
 </head>
 <body>
-<h1 style="font-family: Bembo, serif;"> João Lourenço </h1>
+<h1 style="font-family: , serif;"> João Lourenço </h1>
 <h6> j dot lourenco at uni dash muenster dot de </h3>
 <br>
-<p style="font-family: Bembo, serif;">
+<p style="font-family: Caslon, serif;">
 Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
 </p>
 <br>
