--- a/indexen.html
+++ b/indexen.html
@@ -10,7 +10,7 @@
 </head>
 </head>
 <body>
-<h1 style="font-family: , serif;"> João Lourenço </h1>
+<h1 style="font-family: Caslon, serif;"> João Lourenço </h1>
 <h6> j dot lourenco at uni dash muenster dot de </h3>
 <br>
 <p style="font-family: Caslon, serif;">
