--- a/indexen.html
+++ b/indexen.html
@@ -10,14 +10,14 @@
 </head>
 </head>
 <body>
-<h1 style="font-family: Caslon, serif;"> João Lourenço </h1>
+<h1 style="font-family: Garamond, serif;"> João Lourenço </h1>
 <h6> j dot lourenco at uni dash muenster dot de </h3>
 <br>
-<p style="font-family: Caslon, serif;">
+<p style="font-family: Garamond, serif;">
 Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
 </p>
 <br>
-  <p style="font-family: Bembo, serif;">
+  <p style="font-family: Garamond, serif;">
 Languages:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//indexfr.html">fr</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
   </p>    
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
