--- a/indexde.html
+++ b/indexde.html
@@ -10,21 +10,21 @@
 </head>
 </head>
 <body>
-<h1 style="font-family: Sabon, serif;"> João Lourenço </h1>
+<h1 style="font-family: Helvetica, serif;"> João Lourenço </h1>
 <h6> j punkt lourenco at uni spur muenster punkt de </h3>
 <br>
-<p style="font-family: Sabon, serif;">
+<p style="font-family: Helvetica, serif;">
 Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
 </p>
 <br>
-  <p style="font-family: Sabon, serif;">
+  <p style="font-family: Garamond, serif;">
 Sprachen: <a href="https://rastrel.github.io/Lourenco/indexen">en</a>, <a href="https://rastrel.github.io/Lourenco//indexfr.html">fr</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
   </p>    
-<p style="font-family: Sabon, serif;">
+<p style="font-family: Garamond, serif;">
 Lebenslauf: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>, <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">fr</a>.
 </p>
 <br>
-<p style="font-family: Sabon, serif;">
+<p style="font-family: Garamond, serif;">
 Arbeiten:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
