--- a/indexde.html
+++ b/indexde.html
@@ -10,10 +10,9 @@
 </head>
 </head>
 <body>
-<h1 style="font-family: Helvetica, serif;"> João Lourenço </h1>
-<h6> j punkt lourenco at uni spur muenster punkt de </h3>
+<h1 style="font-family: Garamond, serif;"> João Lourenço </h1>
 <br>
-<p style="font-family: Helvetica, serif;">
+<p style="font-family: Garamond, serif;">
 Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
 </p>
 <br>
