--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 </head>
 <body>
-<h1 style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;"> João Lourenço </h1>
+<h1 style="font-family: Garamond, serif;"> João Lourenço </h1>
 <br>
-<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+<p style="font-family: Garamond, serif;">
 Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
 </p>
  <br>
-<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Línguas:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//indexen.html">en</a>, <a href="https://rastrel.github.io/Lourenco//indexfr.html">fr</a> 
+<p style="font-family: Garamond, serif;">
+Línguas:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//indexen.html">en</a> 
   </p>      
-<p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Currículo: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>, <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">fr</a>.
+<p style="font-family: Garamond, serif;">
+Currículo: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
