--- a/indexen.html
+++ b/indexen.html
@@ -17,10 +17,10 @@ Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter.
 </p>
 <br>
   <p style="font-family: Garamond, serif;">
-Languages:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//indexfr.html">fr</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
+Languages:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
   </p>    
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-CV: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>, <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">fr</a>.
+CV: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
