--- a/indexde.html
+++ b/indexde.html
@@ -17,10 +17,10 @@ Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter.
 </p>
 <br>
   <p style="font-family: Garamond, serif;">
-Sprachen: <a href="https://rastrel.github.io/Lourenco/indexen">en</a>, <a href="https://rastrel.github.io/Lourenco//indexfr.html">fr</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
+Sprachen: <a href="https://rastrel.github.io/Lourenco/indexen">en</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
   </p>    
 <p style="font-family: Garamond, serif;">
-Lebenslauf: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>, <a href="https://rastrel.github.io/Lourenco/vitafrançais.pdf">fr</a>.
+Lebenslauf: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>.
 </p>
 <br>
 <p style="font-family: Garamond, serif;">
