--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter.
 Línguas:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//indexen.html">en</a> 
   </p>      
 <p style="font-family: Garamond, serif;">
-Currículo: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>.
+<a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">Currículo</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
