--- a/indexde.html
+++ b/indexde.html
@@ -20,7 +20,7 @@ Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter.
 Sprachen: <a href="https://rastrel.github.io/Lourenco/indexen">en</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
   </p>    
 <p style="font-family: Garamond, serif;">
-Lebenslauf: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>.
+<a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">Lebenslauf</a>.
 </p>
 <br>
 <p style="font-family: Garamond, serif;">
