--- a/indexen.html
+++ b/indexen.html
@@ -20,7 +20,7 @@ Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter.
 Languages:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
   </p>    
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-CV: <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">en</a>.
+<a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">CV</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
