--- a/indexen.html
+++ b/indexen.html
@@ -48,7 +48,7 @@ In preparation.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 7. <a href="https://rastrel.github.io/Lourenco/tubenbghd.pdf">Tubular neighborhoods of local models</a> (with Ian Gleason).
-<a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022).
+<a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022). Duke Math. J.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (with Johannes Anschütz, Ian Gleason, and Timo Richarz).
