--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Para vir.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 11. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
-Para vir.
+<a href="https://arxiv.org/abs/2311.04043">arXiv</a> (2023).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 10. <a href="https://rastrel.github.io/Lourenco/fix-pts.pdf">Fixed points under pinning-preserving automorphisms of reductive group schemes</a> (com Pramod Achar, Timo Richarz, e Simon Riche).
