--- a/indexde.html
+++ b/indexde.html
@@ -31,8 +31,8 @@ Arbeiten:
 In Entstehung.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-11. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (mit Johannes Anschütz, Zhiyou Wu, und Jize Yu).
-In Entstehung.
+11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (mit Johannes Anschütz, Zhiyou Wu, und Jize Yu).
+<a href="https://arxiv.org/abs/2311.04043">arXiv</a> (2023).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 10. <a href="https://rastrel.github.io/Lourenco/fix-pts.pdf">Fixed points under pinning-preserving automorphisms of reductive group schemes</a> (mit Pramod Achar, Timo Richarz, und Simon Riche).
