--- a/indexen.html
+++ b/indexen.html
@@ -31,8 +31,8 @@ Papers:
 In preparation.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-11. Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (with Johannes Anschütz, Zhiyou Wu, and Jize Yu).
-In preparation.
+11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (with Johannes Anschütz, Zhiyou Wu, and Jize Yu).
+<a href="https://arxiv.org/abs/2311.04043">arXiv</a> (2023).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 10. <a href="https://rastrel.github.io/Lourenco/fix-pts.pdf">Fixed points under pinning-preserving automorphisms of reductive group schemes</a> (with Pramod Achar, Timo Richarz, and Simon Riche).
