--- a/indexde.html
+++ b/indexde.html
@@ -31,7 +31,7 @@ Arbeiten:
 In Entstehung.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (mit Johannes Anschütz, Zhiyou Wu, und Jize Yu).
+11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic</a> (mit Johannes Anschütz, Zhiyou Wu, und Jize Yu).
 <a href="https://arxiv.org/abs/2311.04043">arXiv</a> (2023).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
