--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Produção:
 Para vir.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
+11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic</a> (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
 <a href="https://arxiv.org/abs/2311.04043">arXiv</a> (2023).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
