--- a/indexde.html
+++ b/indexde.html
@@ -13,7 +13,7 @@
 <h1 style="font-family: Garamond, serif;"> João Lourenço </h1>
 <br>
 <p style="font-family: Garamond, serif;">
-Westfälische Wilhelms-Universität Münster. Wissenschaftlicher Mitarbeiter. 
+Universität Münster. Akademischer Rat auf Zeit.
 </p>
 <br>
   <p style="font-family: Garamond, serif;">
