--- a/indexde.html
+++ b/indexde.html
@@ -47,7 +47,7 @@ In Entstehung.
 <a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-7. <a href="https://rastrel.github.io/Lourenco/tubenbghd.pdf">Tubular neighborhoods of local models</a> (mit Ian Gleason).
+7. <a href="https://rastrel.github.io/Lourenco/tubengbhd.pdf">Tubular neighborhoods of local models</a> (mit Ian Gleason).
 <a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022). Duke Math. J.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
