--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@ Línguas:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a
 Produção:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-12. A modular ramified geometric Satake equivalence (com Pramod Achar, Timo Richarz, e Simon Riche).
+13. A modular ramified geometric Satake equivalence (com Pramod Achar, Timo Richarz, e Simon Riche).
 Para vir.
+</p>
+  <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems.</a> (2023)
+
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic</a> (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
