--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Produção:
 Para vir.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems.</a> (2023)
+12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems</a> (2023).
 
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
