--- a/indexde.html
+++ b/indexde.html
@@ -27,8 +27,12 @@ Sprachen: <a href="https://rastrel.github.io/Lourenco/indexen">en</a>, <a href="
 Arbeiten:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-12. A modular ramified geometric Satake equivalence (mit Pramod Achar, Timo Richarz, und Simon Riche).
+13. A modular ramified geometric Satake equivalence (mit Pramod Achar, Timo Richarz, und Simon Riche).
 In Entstehung.
+</p>
+   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems</a> (2023).
+
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic</a> (mit Johannes Anschütz, Zhiyou Wu, und Jize Yu).
