--- a/indexen.html
+++ b/indexen.html
@@ -27,8 +27,12 @@ Languages:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <
 Papers:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-12. A modular ramified geometric Satake equivalence (with Pramod Achar, Timo Richarz, and Simon Riche).
+13. A modular ramified geometric Satake equivalence (with Pramod Achar, Timo Richarz, and Simon Riche).
 In preparation.
+</p>
+   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems</a> (2023).
+
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic</a> (with Johannes Anschütz, Zhiyou Wu, and Jize Yu).
